@@ -44,6 +44,7 @@ import java.io.IOException;
 import java.io.StringReader;
 
 import ucar.nc2.NetcdfFile;
+import ucar.nc2.TestAll;
 import ucar.nc2.ncml.NcMLReader;
 import ucar.nc2.dataset.NetcdfDataset;
 
@@ -64,12 +65,13 @@ public class TestDatasetURL extends TestCase {
   }
 
   public void testNcML() throws IOException {
+    String dir = TestAll.upcShareDir;
     String ncml =
       "<?xml version='1.0' encoding='UTF-8'?>\n" +
       "<netcdf xmlns='http://www.unidata.ucar.edu/namespaces/netcdf/ncml-2.2'>\n" +
       " <aggregation type='joinNew' dimName='fake'>\n" +
-      "  <netcdf location='file:/D:/data/dir mit blank/20070101.nc' coord='1'/>\n" +
-      "  <netcdf location='file:/D:/data/dir mit blank/20070301.nc' coord='2'/>\n" +
+      "  <netcdf location='file:/"+dir+"/tds/dir mit blank/20070101.nc' coord='1'/>\n" +
+      "  <netcdf location='file:/"+dir+"/tds/dir mit blank/20070301.nc' coord='2'/>\n" +
       " </aggregation>\n" +
       "</netcdf> ";
     NetcdfFile ncfile = NcMLReader.readNcML(new StringReader(ncml), null);
