@@ -45,7 +45,7 @@ or <a href="http://www.unidata.ucar.edu/mailing_lists/archives/netcdf-java/">bro
   <li>The <a href="ftp://ftp.unidata.ucar.edu/pub/netcdf-java/v4.0/netcdfUI-4.0.jar">unbundled GUI.jar</a> (<a href="ftp://ftp.unidata.ucar.edu/pub/netcdf-java/v4.0/netcdfUI-4.0.jar.MD5">MD5</a>) for GUI applications that want to choose   which other jars are needed</li>
   <li>The<a href="ftp://ftp.unidata.ucar.edu/pub/netcdf-java/v4.0/ncSrc-4.0.zip"> source code </a>(<a href="ftp://ftp.unidata.ucar.edu/pub/netcdf-java/v4.0/ncSrc-4.0.zip.MD5">MD5</a>) (unzip and follow the <a href="v4.0/README">README</a>)</li>
   <li>See <a href="v4.0/CHANGES">CHANGES</a> for version changes.</li>
-  <li>Try out the <strong> 4.0</strong> version of ToolsUI application: <a href="v4.0/webstart/netCDFtools.jnlp">launch from webstart</a>.</li>
+  <li>Try out the <strong> 4.0</strong> version of ToolsUI application: <a href="v4.0/webstart/netCDFtools.jnlp">launch from webstart</a>. </li>
 </ul>
 <ul>
   <li> <a href="v4.0/javadoc/index.html">Public javadoc</a>, downloadable <a href="ftp://ftp.unidata.ucar.edu/pub/netcdf-java/v4.0/javadoc-4.0.jar">jar file</a>. This is the public interface. Future changes to the API will remain backwards compatible with this API. </li>
@@ -129,6 +129,11 @@ or <a href="http://www.unidata.ucar.edu/mailing_lists/archives/netcdf-java/">bro
   <li><a href="formats/DataDiscoveryAttConvention.html">NetCDF Attribute Convention for Dataset Discovery</a></li>
   <li><a href="formats/RecordsInNetcdf3.html">Using Records in NetCDF-3 files</a> </li>
 </ul>
+<h3>WebEx demo</h3>
+<ul>
+  <li><a href="http://coast-enviro.er.usgs.gov/models/share/toolsUI.wrf">ToolsUI</a> demo</li>
+</ul>
+<p>You may need to first download the <a href="http://www.webex.com/downloadplayer.html">free WebEx Player.</a></p>
 <h3>Coordinate Systems<a name="CoordSys"></a></h3>
 <p>Working notes and documentation on the <strong><em>coordinate system</em></strong> layer of the CDM</p>
 <ul>
@@ -182,7 +187,7 @@ or <a href="http://www.unidata.ucar.edu/mailing_lists/archives/netcdf-java/">bro
 <hr WIDTH="100%">
 <address>
 <a href="NetcdfUsers.htm"><img src="nc.gif" width="64" height="64" border="0"></a> This document is maintained by <a href="mailto:caron@unidata.ucar.edu">John Caron</a> 
-and was last updated on Mar 20, 2009
+and was last updated on April 20, 2009
 </address>
 
 </body>
